--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,20 +1,70 @@
 {% extends "base.html" %}
-{% load unit_price total_price %}
+
+{% load static %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/cart-main.css' %}">
+{% endblock %}
+
 
 {% block main_content %}
-    <!-- send user instance as object, populate the page with it -->
-    <p> Cart Page</p>
-    <ul>
-    {% for item in items %}
-            <li>{{ item.book }}, ${% unit_price item.count item.book.price %}, Count: {{ item.count }}, Reservation: {{ item.reservation }}
 
-                <form method="post" action="remove/{{ item.book.slug }}/"> {% csrf_token %}
-                    <input type="submit" name="remove-item" value="Remove">
+    <body>
+    <div class="container-fluid banner">
+        <div class="row">
+            <div class="col">
+                <img id="banner_img" src="{% static 'images/dogear.jpg' %}"/>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid main">
+        <div class="row">
+            <div class="col-md-8">
+                <form>
+                    <ul class="list-group">
+                        <li class="list-group-item">Item 1: <span class="amt">$X.XX</span></li>
+                        <li class="list-group-item">Item 2: <span class="amt">$X.XX</span></li>
+                        <li class="list-group-item">Item 3: <span class="amt">$X.XX</span></li>
+                        <li class="list-group-item">Item 4: <span class="amt">$X.XX</span></li>
+                        <li class="list-group-item tot">Promo: &nbsp;&nbsp;<span class="amt">$X.XX</span></li>
+                        <li class="list-group-item tot">Total: &nbsp;&nbsp;<span class="amt">$X.XX</span></li>
+                    </ul>
+
+                    <ul class="list-group promo-contr">
+                        <li class="list-group-item">Promo Code: <input type="text" class="form-control"
+                                                                       name="Promo"></input><br></li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-dark">Apply Promo</button>
+                        </li>
+                    </ul>
                 </form>
+            </div>
+            <div class="col-4 sidebar">
+                <button id="checkout" class="btn-lg btn-dark"> CheckOut</button>
+                <br>
+                <button id="shop" class="btn-lg btn-dark"> Continue Shopping</button>
+                <hr>
 
-            </li>
-    {% endfor %}
-    <li>(Sub) Total: ${% total_price items %}</li>
-    </ul>
+
+                <h4>Similar Items:</h4>
+                <ul class="list-group">
+                    <li class="list-group-item">{Book}</li>
+                    <li class="list-group-item">{Book}</li>
+                    <li class="list-group-item">{Book}</li>
+                    <li class="list-group-item">{Book}</li>
+                </ul>
+                <br>
+
+                <h4>Promoted Items:</h4>
+                <ul class="list-group">
+                    <li class="list-group-item">{Book}</li>
+                    <li class="list-group-item">{Book}</li>
+                    <li class="list-group-item">{Book}</li>
+                    <li class="list-group-item">{Book}</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    </body>
 
 {% endblock main_content %}
