--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -1,11 +1,63 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/create-acct-main.css' %}">
+{% endblock per_page_css %}
+
 {% block main_content %}
 
-<form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
-	{{user_form.as_ul}}
-    {{member_form.as_ul}}
-	<input type="submit" class='btn btn-default' value="Create Account"/>
-</form>
+    <div class="container-fluid banner">
+        <div class="row">
+            <div class="col-md-6">
+                <img id="banner_img" src="{% static 'images/dogear.jpg' %}"/>
+            </div>
+            <div class="col-6">
+                <h3>Create your Dog-Ear account</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="offset-4 col-md-8">
+                <form>
+                    <ul class="list-group">
+                        <li class="list-group-item">Firstname:<input class="inputbox" type="text" value="Firstname"
+                                                                     name="firstname"></input><br></li>
+                        <li class="list-group-item">Lastname:<input class="inputbox" type="text" value="Lastname"
+                                                                    name="lastname"></input></li>
+                        <li class="list-group-item">Email:<input class="inputbox" type="text" value="Email Address"
+                                                                 name="email"></input><br></li>
+                        <li class="list-group-item">Street Address:<input class="inputbox" value="Street Address"
+                                                                          type="text" name="address"></input></li>
+                        <li class="list-group-item">DOB:<input class="inputboxSpec" id="Month" value="MM" type="text"
+                                                               name="Month"></input><input class="inputboxSpec" id="Day"
+                                                                                           value="DD" type="text"
+                                                                                           name="Day"></input><input
+                                class="inputboxSpec" id="Year" value="YYYY" type="text" name="Year"></input><br></li>
+                        <li class="list-group-item">Password:<input class="inputbox" value="Password" type="password"
+                                                                    name="password"></input></li>
+                        <li class="list-group-item">Re-enter Password:<input class="inputbox" value="Password"
+                                                                             type="password"
+                                                                             name="password_confirm"></input></li>
+                        <li class="list-group-item">Receive our Newsletter:<input class="inputbox" type="checkbox"
+                                                                                  name="password_confirm"></input></li>
+                        <li class="list-group-item">User-type:<select class="inputbox" name="account_type">
+                            <option value="vendor">Vendor</option>
+                            <option value="buyer">Buyer</option>
+                            <select>
+                        </li>
+                        <div class="profile_pic">
+                            <img id="profile_img" src="{% static 'images/placeholder.jpg' %}"
+                                 alt=""/><input class="btn-sm btn-dark" id="browse" type="file"
+                                                     id="myFile"></input>
+                        </div>
+                        <input class="btn-sm btn-dark" id="submit" type="submit" value="Submit">
+                    </ul>
+                </form>
+            </div>
+        </div>
+    </div>
 
 {% endblock main_content %}
