--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -1,8 +1,146 @@
 {% extends "base.html" %}
 
-{% block main_content %}
+{% load static %}
 
-    <!-- item info will need to be passed into this -->
-    <p> Inventory Page</p>
+{% block per_page_css %}
+	<link rel="stylesheet" href="{% static 'css/inventory-main.css' %}">
+{% endblock per_page_css %}
+
+{% block main_content %}
+    <!-- send user instance as object, populate the page with it -->
+
+    <div class="container-fluid spaced">
+        <div class="row">
+            <div class="col-md-12">
+                <span class="left"><i class="fas fa-user-alt"></i>{Username}</span>
+            </div>
+        </div>
+        <div class="row banner">
+            <div class="col-md-12">
+                <h1> {Books Inventory} </h1>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 button-group">
+                <form id="holder">
+                    <fieldset>
+                        <button class="btn-sm btn-dark">Return to the Vendor Screen</button>
+                    </fieldset>
+
+
+                    <h3 id="stock-head">Out of Stock:</h3>
+                    <ul id="out-of-stock" class="list-group">
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                    </ul>
+
+
+                    <h3 id="stock-head">Stock is Low:</h3>
+                    <ul id="out-of-stock" class="list-group">
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                        <li class="list-group-item">
+                            <button class="btn-sm btn-light">{book title}</button>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+            <div class="col-md-10">
+                <table class="table table-light table-bordered">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Your Inventory:</th>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Stock</th>
+                        <th>Edit/Delete</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"></img></th>
+                        <th>{Book Title}</th>
+                        <th>{Book Price}</th>
+                        <th>{Book Stock}</th>
+                        <th>
+                            <button class="side-sp btn-sm btn-dark"><i class="fas fa-eraser"></i></button>
+                            <button class="btn-sm btn-dark"><i class="fas fa-minus-circle"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"></img></th>
+                        <th>{Book Title}</th>
+                        <th>{Book Price}</th>
+                        <th>{Book Stock}</th>
+                        <th>
+                            <button class="side-sp btn-sm btn-dark"><i class="fas fa-eraser"></i></button>
+                            <button class="btn-sm btn-dark"><i class="fas fa-minus-circle"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"></img></th>
+                        <th>{Book Title}</th>
+                        <th>{Book Price}</th>
+                        <th>{Book Stock}</th>
+                        <th>
+                            <button class="side-sp btn-sm btn-dark"><i class="fas fa-eraser"></i></button>
+                            <button class="btn-sm btn-dark"><i class="fas fa-minus-circle"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"></img></th>
+                        <th>{Book Title}</th>
+                        <th>{Book Price}</th>
+                        <th>{Book Stock}</th>
+                        <th>
+                            <button class="side-sp btn-sm btn-dark"><i class="fas fa-eraser"></i></button>
+                            <button class="btn-sm btn-dark"><i class="fas fa-minus-circle"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"></img></th>
+                        <th>{Book Title}</th>
+                        <th>{Book Price}</th>
+                        <th>{Book Stock}</th>
+                        <th>
+                            <button class="side-sp btn-sm btn-dark"><i class="fas fa-eraser"></i></button>
+                            <button class="btn-sm btn-dark"><i class="fas fa-minus-circle"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th class="add-bk" colspan="5" scope="row">
+                            <button class="btn-sm btn-dark">Add a Book</button>
+                        </th>
+                    </tr>
+                    <tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
 {% endblock main_content %}
