--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,22 +1,76 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/landing-main.css' %}">
+{% endblock per_page_css %}
+
 {% block main_content %}
 
+    <body>
     <!-- send user instance as object, populate the page with it -->
-    <h1> Landing Page</h1>
+    <div class="container-fluid banner">
+        <div class="row">
+            <div class="col">
+                <h2>Welcome to Dog-Ear</h2>
+            </div>
+        </div>
+        <div class="row login">
+            <div class="col-sm-6">
+                <button type="button" id="doLogin" class="btn-lg btn-light">Login</button>
+            </div>
+            <div class="col-sm-6">
+                <a href="create_account.html">
+                    <button type="button" class="btn-lg btn-light">Create Account</button>
+                </a>
+            </div>
+            <div class="col-md-12">
+                <a href="home_page.html">
+                    <button class="btn-sm btn-light">Continue as non-user</button>
+                </a>
+            </div>
+        </div>
+    </div>
 
-    <h3>New books: </h3>
-    <ul>
-    {% for book in new_books %}
-        <li>{{ book }}</li>
-    {% endfor %}
-    </ul>
+{#    <div id="myPopup" class="popup">#}
+{#        <div class="popup-content">#}
+{#            <div class="container">#}
+{#                <div class="row">#}
+{#                    <div class="col">#}
+{#                        <img id="icon" src="{% static 'images/dogear.jpg' %}"/>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="row">#}
+{#                    <div class="col">#}
+{#                        <label><b>Username</b></label>#}
+{#                        <input type="text" placeholder="Enter Username" name="user" id="user">#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="row">#}
+{#                    <div class="col">#}
+{#                        <label><b>Password</b></label>#}
+{#                        <input type="password" placeholder="Enter Password" name="pwd" id="pwd">#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="row">#}
+{#                    <div class="col">#}
+{#                        <button id="login" value="login" class="btn-sm btn-dark">Login</button>#}
+{#                        <a href="create_account.html">#}
+{#                            <button id="register" class="btn-sm btn-dark">Register here.</button>#}
+{#                        </a>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="row">#}
+{#                    <div class="col">#}
+{#                        <button id="forgot" class="btn-sm btn-dark">Forgot username or password?</button>#}
+{#                        <div class="alert alert-success" role="alert" style="display: none;"></div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 
-    <h3>Newly Added books: </h3>
-    <ul>
-    {% for book in newly_added_books %}
-        <li>{{ book }}</li>
-    {% endfor %}
-    </ul>
+    </body>
 
 {% endblock main_content %}
