--- a/templates/query.html
+++ b/templates/query.html
@@ -1,32 +1,125 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+{% block per_page_css %}
+	<link rel="stylesheet" href="{% static 'css/query-main.css' %}">
+{% endblock per_page_css %}
+
 {% block main_content %}
-
     <!-- send user instance as object, populate the page with it -->
-    <p> Query Page</p>
-    <h3>Books by title: </h3>
-    <ul>
-    {% for book in books %}
-        <li>{{ book.slug }}, {{ book.author }}, {{ book.price }}</li>
-    {% endfor %}
-    </ul>
+    <div class="container-fluid spaced">
+        <div class="row">
+            <div class="col-md-12">
+                <span class="left"><i class="fas fa-user-alt"></i>{Username}</span>
+            </div>
+        </div>
+        <div class="row banner">
+            <div class="col-md-12">
+                <h1> {Books Search Results} </h1>
+            </div>
+        </div>
+    </div>
 
-    <div class="pagination">
-		<span class="step-links">
-			{% if books.has_previous %}
-				<a href="?{{page_var}}=1&q={{request.GET.q}}">&laquo; first</a>
-				<a href="?{{page_var}}={{ books.previous_page_number }}&q={{request.GET.q}}">previous</a>
-			{% endif %}
-
-			<span class="current">
-				Page {{ books.number }} of {{ books.paginator.num_pages }}.
-			</span>
-
-			{% if books.has_next %}
-				<a href="?{{page_var}}={{ books.next_page_number }}&q={{request.GET.q}}">next</a>
-				<a href="?{{page_var}}={{ books.paginator.num_pages }}&q={{request.GET.q}}">last &raquo;</a>
-			{% endif %}
-		</span>
-	</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 search_panel">
+                <form>
+                    <fieldset class="spaced">
+                        <legend>Genre:</legend>
+                        <select name="genre">
+                            <option name="Null"></option>
+                            <option name="Sci-Fi">Science Fiction</option>
+                            <option name="History">History</option>
+                            <option name="Religious">Religious</option>
+                        </select>
+                    </fieldset>
+                    <fieldset class="spaced">
+                        <legend>Price:</legend>
+                        <input type="radio" name="price"> $0-$10</input><br>
+                        <input type="radio" name="price"> $10-$20</input><br>
+                        <input type="radio" name="price"> $20-$30</input><br>
+                        <input type="radio" name="price"> $30+</input><br>
+                    </fieldset>
+                    <fieldset class="spaced">
+                        <legend>Author:</legend>
+                        <button class="author-btn">{Author}</button>
+                        <br>
+                        <button class="author-btn">{Author}</button>
+                        <br>
+                        <button class="author-btn">{Author}</button>
+                        <br>
+                        <button class="author-btn">{Author}</button>
+                        <br>
+                        <button class="author-btn">{Author}</button>
+                        <br>
+                    </fieldset>
+                    <fieldset class="spaced">
+                        <input type="submit" value="Refine Search"/>
+                    </fieldset>
+                </form>
+            </div>
+            <div class="col-md-10">
+                <table class="table table-light table-striped">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Your Search Results:</th>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Rating</th>
+                        <th>Add to Cart</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"/></th>
+                        <th><p>{Book Title}</p></th>
+                        <th><p>{Book Price}</p></th>
+                        <th><p>{Book Rating}</p></th>
+                        <th>
+                            <button class="btn-sm btn-dark"><i class="fas fa-shopping-cart"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"/></th>
+                        <th><p>{Book Title}</p></th>
+                        <th><p>{Book Price}</p></th>
+                        <th><p>{Book Rating}</p></th>
+                        <th>
+                            <button class="btn-sm btn-dark"><i class="fas fa-shopping-cart"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"/></th>
+                        <th><p>{Book Title}</p></th>
+                        <th><p>{Book Price}</p></th>
+                        <th><p>{Book Rating}</p></th>
+                        <th>
+                            <button class="btn-sm btn-dark"><i class="fas fa-shopping-cart"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"/></th>
+                        <th><p>{Book Title}</p></th>
+                        <th><p>{Book Price}</p></th>
+                        <th><p>{Book Rating}</p></th>
+                        <th>
+                            <button class="btn-sm btn-dark"><i class="fas fa-shopping-cart"></i></button>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row"><img class="thumbnail" src="{% static 'images/img.png' %}"/></th>
+                        <th><p>{Book Title}</p></th>
+                        <th><p>{Book Price}</p></th>
+                        <th><p>{Book Rating}</p></th>
+                        <th>
+                            <button class="btn-sm btn-dark"><i class="fas fa-shopping-cart"></i></button>
+                        </th>
+                    </tr>
+                    <tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
 {% endblock main_content %}
