Added braintree script and jquery block

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,8 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
 
+    <script src="https://js.braintreegateway.com/js/braintree-2.32.1.min.js"></script>
+
 </head>
 
 <body>
@@ -164,5 +166,9 @@
 <!-- need working footer, previous one covered page content. -->
 
 </body>
+
+{% block jquery %}
+
+{% endblock jquery %}
 
 </html>
