--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
     <title> {% block title %} Bookstore {% endblock title %}</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+{#    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"#}
+{#          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">#}
+    <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}">
 
     <!-- Font Awesome Icons CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
@@ -63,7 +64,6 @@
                 </a>
 
                 <!-- Will need logic and content to grab approrpiate items -->
-
                 <div class="dropdown-menu" aria-labelledby="prodDropdown">
                     <a class="dropdown-item" href="#">Product Type 1</a>
                     <!-- Will link to a search query @ /q?s='...' -->
@@ -88,9 +88,12 @@
 
         <!-- Search Bar -->
         <form method="GET" class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search Books or Authors"
+            <input class="form-control mr-sm-2" type="search" placeholder="Search..."
                    aria-label="searchBar">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            {#            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">#}
+            <button class="btn my-2 my-sm-0" type="submit">
+                <i class="fas fa-search fa-lg"></i>
+            </button>
         </form>
 
         <!-- Cart Icon Dropdown -->
@@ -103,14 +106,13 @@
                 </a>
 
                 <!-- Will need logic to determine number of items in user's cart. -->
-
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="cart">
-                    <a class="dropdown-item" href="#">Product Type 1</a> <!-- Will link to an item @ /item-as-slug -->
-                    <a class="dropdown-item" href="#">Product Type 2</a> <!-- Will link to an item @ /item-as-slug -->
-                    <a class="dropdown-item" href="#">Product Type 3</a> <!-- Will link to an item @ /item-as-slug -->
-                    <a class="dropdown-item" href="#">Product Type 4</a> <!-- Will link to an item @ /item-as-slug -->
-                    <a class="dropdown-item" href="#">Product Type 5</a> <!-- Will link to an item @ /item-as-slug -->
-                    <a class="dropdown-item" href="#">Product Type 6</a> <!-- Will link to an item @ /item-as-slug -->
+                    <a class="dropdown-item" href="#">Product Type 1</a>
+                    <a class="dropdown-item" href="#">Product Type 2</a>
+                    <a class="dropdown-item" href="#">Product Type 3</a>
+                    <a class="dropdown-item" href="#">Product Type 4</a>
+                    <a class="dropdown-item" href="#">Product Type 5</a>
+                    <a class="dropdown-item" href="#">Product Type 6</a>
                 </div>
             </div>
 
@@ -125,21 +127,20 @@
                     <i class="nav-item fas fa-user fa-lg"></i>
                 </a>
 
-                <!-- Will need logic to test whether a user is loged in -->
-
+                <!-- Will need logic to test whether a user is logged in -->
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
                     <a class="dropdown-item" href="#">User Profile</a> <!-- Will link to a search query @ /q?s='...' -->
                     <a class="dropdown-item" href="#">Purchases</a> <!-- Will link to a search query @ /q?s='...' -->
                     <a class="dropdown-item" href="#">Settings</a> <!-- Will link to a search query @ /q?s='...' -->
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Log out</a> <!-- Will link to a search query @ /q?s='...' -->
                 </div>
 
             </div>
         </div>
-
     </div>
 </nav>
-<!-- End Title Bar -->
+
 
 {% block main_content %}
 
